--- a/ClothingStore.Data.Requests/ClothingStore.Data.Requests.csproj
+++ b/ClothingStore.Data.Requests/ClothingStore.Data.Requests.csproj
@@ -6,4 +6,12 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\ClothingStore.Data.Context\ClothingStore.Data.Context.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="6.0.0-preview.4.21253.5" />
+    </ItemGroup>
+
 </Project>
