--- a/ClothingStore.Data.Validators/ClothingStore.Data.Validators.csproj
+++ b/ClothingStore.Data.Validators/ClothingStore.Data.Validators.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\ClothingStore.Configurations\ClothingStore.Configurations.csproj" />
       <ProjectReference Include="..\ClothingStore.Data.Requests\ClothingStore.Data.Requests.csproj" />
     </ItemGroup>
 
