--- a/ClothingStore.API/ClothingStore.API.csproj
+++ b/ClothingStore.API/ClothingStore.API.csproj
@@ -11,6 +11,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AutoMapper" Version="12.0.1" />
+        <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
         <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
         <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.5.2" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.5" />
@@ -28,6 +30,7 @@
       <ProjectReference Include="..\ClothingStore.Data.Context\ClothingStore.Data.Context.csproj" />
       <ProjectReference Include="..\ClothingStore.Data.Requests\ClothingStore.Data.Requests.csproj" />
       <ProjectReference Include="..\ClothingStore.Data.Responses\ClothingStore.Data.Responses.csproj" />
+      <ProjectReference Include="..\ClothingStore.Data.Validators\ClothingStore.Data.Validators.csproj" />
       <ProjectReference Include="..\ClothingStore.Services\ClothingStore.Services.csproj" />
     </ItemGroup>
 
