--- a/ClothingStore.Data.Validators/ClothingStore.Data.Validators.csproj
+++ b/ClothingStore.Data.Validators/ClothingStore.Data.Validators.csproj
@@ -15,4 +15,19 @@
       <ProjectReference Include="..\ClothingStore.Data.Requests\ClothingStore.Data.Requests.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Compile Include="obj\Debug\net7.0\.NETCoreApp,Version=v7.0.AssemblyAttributes.cs" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Include="obj\ClothingStore.Data.Validators.csproj.nuget.dgspec.json" />
+      <Content Include="obj\Debug\net7.0\ClothingStore.Data.Validators.AssemblyInfoInputs.cache" />
+      <Content Include="obj\Debug\net7.0\ClothingStore.Data.Validators.assets.cache" />
+      <Content Include="obj\Debug\net7.0\ClothingStore.Data.Validators.csproj.AssemblyReference.cache" />
+      <Content Include="obj\project.assets.json" />
+      <Content Include="obj\project.nuget.cache" />
+      <Content Include="obj\project.packagespec.json" />
+      <Content Include="obj\rider.project.restore.info" />
+    </ItemGroup>
+
 </Project>
