--- a/ClothingStore.API/ClothingStore.API.csproj
+++ b/ClothingStore.API/ClothingStore.API.csproj
@@ -34,4 +34,8 @@
       <ProjectReference Include="..\ClothingStore.Services\ClothingStore.Services.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="wwwroot\" />
+    </ItemGroup>
+
 </Project>
