--- a/ClothingStore.API/appsettings.json
+++ b/ClothingStore.API/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "Database": "Host=localhost;Port=5432;Database=ClothingStore;Username=postgres;Password=toor;"
+    "Database": "Host=localhost;Port=5432;Database=ClothingStoredsd;Username=postgres;Password=toor;"
   },
   "AuthenticationSection": {
     "Issuer": "SnailBee",
