--- a/ClothingStore.API/appsettings.json
+++ b/ClothingStore.API/appsettings.json
@@ -6,12 +6,12 @@
     }
   },
   "ConnectionStrings": {
-    "Database": "Host=localhost;Port=5432;Database=ClothingStoredsd;Username=postgres;Password=toor;"
+    "Database": "Host=localhost;Port=5432;Database=<name>;Username=<name>;Password=<name>;"
   },
   "AuthenticationSection": {
-    "Issuer": "SnailBee",
-    "Audience": "web",
-    "BearerKey": "pdkO21-40Di12clakJdjalWdasdidjwoq9249125hFaq",
+    "Issuer": "<name>",
+    "Audience": "<name>",
+    "BearerKey": "<name>",
     "LifeTime": 120
   },
   "AllowedHosts": "*"
