--- a/ClothingStore.API/ClothingStore.API.csproj
+++ b/ClothingStore.API/ClothingStore.API.csproj
@@ -5,6 +5,7 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+        <UserSecretsId>ee6d0f77-5e8c-4ad6-9015-f72bfbf099d1</UserSecretsId>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
