--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -6,12 +6,12 @@
     }
   },
   "ConnectionStrings": {
-    "Database": "Host=localhost;Port=5432;Database=<name>;Username=<name>;Password=<name>;"
+    "Database": "Host=localhost;Port=5432;Database=ClothingStore;Username=postgres;Password=toor;"
   },
   "AuthenticationSection": {
-    "Issuer": "<name>",
-    "Audience": "<name>",
-    "BearerKey": "<name>",
+    "Issuer": "Mock",
+    "Audience": "Mock",
+    "BearerKey": "jy3--p-k43nbvcxwqHsjhlWdasdidjwoq54125286dfggl",
     "LifeTime": 120
   },
   "AllowedHosts": "*"
