--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -18,10 +18,7 @@
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
       <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="6.0.0-preview.4.21253.5" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Common\" />
+      <PackageReference Include="Riok.Mapperly" Version="3.2.0-next.1" />
     </ItemGroup>
 
 </Project>
